<resources>
    <string name="app_name" translatable="true">Anti-Corona</string>
    <string name="name" translatable="true">Full Name</string>
    <string name="email" translatable="true">Email</string>
    <string name="password" translatable="true">password</string>
    <string name="REGISTER">REGISTER</string>
    <string name="createnewaccount">Create new account</string>
    <string name="AlreadyRegistered">Already Registered? Login Here</string>
    <string name="Login">Login</string>
    <string name="NewHere">New Here? Create Account</string>
    <string name="Logout">Logout</string>
    <string name="Welcome">Welcome to our AntiCorona Virus</string>
    <string name="GetStart">Get Start</string>
    <string name="tempq">How often does your temprature get?</string>
    <string name="tempa1">normal (37.5)</string>
    <string name="tempa2">moderate (35 to 37)</string>
    <string name="tempa3">really high (more than 37.6)</string>
    <string name="headq">Do you have a terrible headache?</string>
    <string name="heada1">No</string>
    <string name="heada2">Only regular headache after long work</string>
    <string name="heada3">Yes, badly</string>
    <string name="cufq">How about coughing?</string>
    <string name="cufa1">None</string>
    <string name="cufa2">Sometimes, with sputum</string>
    <string name="cufa3">I have dry coughing</string>
    <string name="brtq">Do you have breathing trouble?</string>
    <string name="brta1">normal</string>
    <string name="brta2">Only when I move a lot (ex. running)</string>
    <string name="brta3">Yup, without a reason or even small effort</string>
    <string name="prgq">Having a purge or throwiing up?</string>
    <string name="prga1">No, thank god</string>
    <string name="prga2">I only have some digestion issues</string>
    <string name="prga3">I have it/them for more than 4 days</string>
    <string name="sntq">How\'s your smelling and tasting?</string>
    <string name="snta1">They\'re good</string>
    <string name="snta2">Sometimes my nose gets blocked</string>
    <string name="snta3">I can\'t/barely can smell or breath</string>
    <string name="bpq">Having body pains for no reason?</string>
    <string name="bpa1">Nope</string>
    <string name="bpa2">Only after a long day of max effort</string>
    <string name="bpa3">Yes, harmfully</string>
    <string name="sub">Submit</string>
    <string name="tempan1">: Well</string>
    <string name="tempan2">: some hot drinks would help</string>
    <string name="tempan3">: Take one of the following, Panadol Extra/Advance..Paramol</string>
    <string name="headan1">: Not bad</string>
    <string name="headan2">: That\'s regular</string>
    <string name="headan3">: Take Panadol 3 times a day for two weeks</string>
    <string name="cufan1">: Thank god you have none</string>
    <string name="cufan2">: No worries, it\'s just cold or uuh sort of smoking</string>
    <string name="cufan3">: I think you talk to a doctor.. really, talk to a doctor right now</string>
    <string name="brtan1">: Be proud of being healthy😉</string>
    <string name="brtan2">: That\'s almost normal, you can exercise more and continue</string>
    <string name="brtan3">: Get to have Oxygen sessions immediately</string>
    <string name="prgan1">: God bless you</string>
    <string name="prgan2">: You can drink Rayeb milk or Beril, these help</string>
    <string name="prgan3">: Oh, take this antibiotic once a day;Zythron</string>
    <string name="sntan1">: Yaay, you\'re good</string>
    <string name="sntan2">: Trouble with the nose ha!, I know how it feels</string>
    <string name="sntan3">: This isn\'t good. Take Zythron once a day and Nostamine drops 3 times</string>
    <string name="bpan1">: Keep up</string>
    <string name="bpan2">: Just chill and sleep well</string>
    <string name="bpan3">: Take 10 drops of Vidrop a day</string>
    <string name="genad">And as always, keep your immunity raised by eating Orange or having any other Vitamine-C sources..(ex. C-ZINC)</string>
    <string name="gc">Excellent</string>
    <string name="mc">Moderate, Keep up</string>
    <string name="cc">Critical</string>
    <string name="rgq">Do you want us to keep your data?</string>
    <string name="reg">Register</string>
 <string name="t">Temprature</string>
    <string name="h">Headache</string>
    <string name="c">Coughing</string>
    <string name="b">Breathing</string>
    <string name="p">Purge N Throw up</string>
    <string name="s">Smell N Taste</string>
    <string name="bp">Body pains</string>
<string name="noAn">Please answer all the questions first</string>
<string name="nob">No, bye🖐</string>
    <string name="Back">Back</string>
</resources>